--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/KeyStoreDB
+spring.datasource.username=postgres
+spring.datasource.password=k.Petar98
 
-# Enabling H2 Console
-spring.h2.console.enabled=true
-
-# Custom H2 Console URL
-spring.h2.console.path=/h2
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
