--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.datasource.username=postgres
 spring.datasource.password=k.Petar98
 
 #drop n create table again, good for testing, comment this in production
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.postgresql.Driver
