--- a/src/main/java/mk/finki/ukim/mk/proekt/react_app/package.json
+++ b/src/main/java/mk/finki/ukim/mk/proekt/react_app/package.json
@@ -12,8 +12,10 @@
     "jquery": "^3.4.1",
     "jquery-confirm": "^3.3.4",
     "qs": "^6.9.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0",
+    "react-fittext": "^1.0.0",
+    "react-live-clock": "^4.0.5",
     "react-password-mask": "^3.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
