--- a/src/main/java/mk/finki/ukim/mk/proekt/react_app/package.json
+++ b/src/main/java/mk/finki/ukim/mk/proekt/react_app/package.json
@@ -18,7 +18,8 @@
     "react-live-clock": "^4.0.5",
     "react-password-mask": "^3.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-text-transition": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
