--- a/src/main/java/mk/finki/ukim/mk/proekt/react_app/package.json
+++ b/src/main/java/mk/finki/ukim/mk/proekt/react_app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.12.0",
     "react-fittext": "^1.0.0",
     "react-live-clock": "^4.0.5",
+    "react-next-paging": "^7.0.7",
     "react-password-mask": "^3.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
